# zumic

./: .editorconfig  .env.example  .gitignore  AUTHOR.md  BUGS  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  INSTALL  LICENSE  Makefile  README.md  SECURITY.md  build.rs  clippy.toml  codecov.yml  deny.toml  rust-toolchain.toml  rustfmt.toml  taplo.toml  test_acl.json  zumic.aof  zumic.conf
.cargo/: config.toml
.config/: nextest.toml
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  crash_report.yml  enhancement.yml  feature.yml  question.yml
.github/actions/build-linux-artifacts/: action.yml
.github/actions/build-macos-artifacts/: action.yml
.github/actions/build-windows-artifacts/: action.yml
.github/workflows/: dependency-check.yml  dev-build.yml  develop.yml  property-tests.yml  release.yml  semantic-pull-request.yml
benches/: Cargo.toml  README.md  acl_benchmarks.rs  aof_benchmarks.rs  arc_sds_bytes.rs  arcbytes_benchmarks.rs  bitmap_benches.rs  bitmap_benchmarks.rs  broker_benchmarks.rs  cluster_benchmarks.rs  command_benchmarks.rs  decode_benchmarks.rs  decoder_benchmarks.rs  dict_benchmarks.rs  encode_benchmarks.rs  encoder_benchmarks.rs  float_benchmarks.rs  float_commands.rs  geo_benchmark.rs  hash_benchmarks.rs  hash_commands.rs  int_benchmarks.rs  int_commands.rs  int_set_benchmarks.rs  intset_benchmarks.rs  list_benchmarks.rs  list_commands.rs  listpack_benchmarks.rs  manager_benchmarks.rs  memory_benchmarks.rs  message_benchmarks.rs  parser_benchmarks.rs  password_benchmarks.rs  persistent_benchmarks.rs  quicklist_benchmarks.rs  sds_benchmarks.rs  serializer_benchmarks.rs  set_benchmarks.rs  set_commands.rs  skiplist_benchmarks.rs  (+8 more)
benches/benches/dict_benchmark/: dict_entry_bench.rs  dict_hashers_comparison.rs  dict_rehash_bench.rs
benches/benches/float-benchmark/: float.rs
benches/benches/geo-benchmark/: geo.rs  geo_bench.rs  geo_distance.rs  geo_distance_bench.rs
benches/benches/hll_benchmark/: hll.rs  hll_bench.rs  hll_hash_bench.rs  hll_sparse.rs
benches/benches/intset_benchmark/: intset_bench.rs
benches/benches/listpack_benchmark/: listpack_bench.rs  listpack_clear_truncate_resize_bench.rs  remove_bench.rs
benches/benches/quicklist_benchmark/: quicklist_bench.rs
benches/benches/sds_benchmark/: compare_sds_string_vec_bench.rs  sds_numeric_bench.rs
benches/benches/skiplist_benchmark/: concurrent_bench.rs  skiplist.rs
benches/benches/smarthash_benchmark/: smarthash_bench.rs
benches/benches/zdb-benchmark/: codec_bench.rs  codec_benchmarks.rs  compression_levels.rs  compression_levels_bench.rs  redis_rdb_comparison.rs  redis_rdb_comparison_bench.rs  streaming_bench.rs  streaming_benchmarks.rs  varint_bench.rs  zdb_error_bench.rs
doc/: about.md  api_documentation.md  schema_project.md
docs/: ELLIPSOID_THEORY.md  PROJECT_STRUCTURE.md  raft.md  skiplists.md  СХЕМА_ПРОЕКТА.md
examples/: Cargo.toml  README.md
fuzz/: .gitignore  Cargo.toml  README.md  crash-22583a010f81e43dfeee9a2bfaf11da58cfd5de8  crash-6024918611d1d8e5ffa7e9e90fc5cfb87921a017  crash-6d9dbd004542fae9a752529768ee0ddd6b181203  crash-ea3f3ff0b3af08551d1b92625600ca77b0bce95c
fuzz/targets/: compressed_decode.rs  decode_value.rs  encode_roundtrip.rs  version_compatibility.rs
scripts/: prepare-release.sh  run_fuzz.sh
src/: command_registry.rs  db_context.rs  lib.rs  main.rs
src/application/: acl_port.rs  command.rs  command_port.rs  mod.rs  pubsub.rs  pubsub_port.rs  storage.rs  storage_port.rs  subscription.rs  subscription_port.rs
src/auth/: acl.rs  config.rs  errors.rs  manager.rs  mod.rs  password.rs  tokens.rs
src/client/: connection.rs  core.rs  mod.rs
src/command/: auth.rs  basic.rs  bitmap.rs  execute.rs  float.rs  geo.rs  hash.rs  hll.rs  int.rs  keys.rs  list.rs  mod.rs  pubsub.rs  server.rs  set.rs  stream.rs  string.rs  timeseries.rs  zset.rs
src/config/: cluster.toml  config.rs  default.toml  memory.toml  mod.rs  persistent.toml  settings.rs
src/database/: arc_bytes.rs  arcbytes.rs  bitmap.rs  dict.rs  expire.rs  geo.rs  hll.rs  int_set.rs  intset.rs  list_pack.rs  listpack.rs  lua.rs  mod.rs  pubsub.rs  pubsub_manager.rs  quicklist.rs  sds.rs  skip_list.rs  skiplist.rs  smart_hash.rs  smarthash.rs  stream.rs  types.rs
src/engine/: aof.rs  aof_integrity.rs  cluster.rs  compaction.rs  engine.rs  lua.rs  memory.rs  metrics.rs  mod.rs  persistent.rs  rebalancer.rs  recovery.rs  sharding.rs  slot_manager.rs  storage.rs  store.rs  zdb_protocol.rs
src/error/: auth.rs  client.rs  decode.rs  encode.rs  global.rs  mod.rs  network.rs  parser.rs  pubsub.rs  slot_manager.rs  system.rs  version.rs  zdb_version.rs  zsp_decoder.rs  zsp_encoder.rs  zsp_parser.rs  zsp_serialization.rs
src/logging/: config.rs  filters.rs  formatter.rs  handle.rs  mod.rs  slow_log.rs  slow_query_layer.rs
src/modules/: api.rs  loader.rs  mod.rs  plugin_manager.rs  wasm.rs
src/network/: admin_commands.rs  banner.rs  connection.rs  connection_registry.rs  connection_state.rs  mod.rs  server.rs
src/pubsub/: broker.rs  intern.rs  message.rs  mod.rs  pubsub_manager.rs  subscriber.rs  zsp_integration.rs  zsp_types.rs
static/: index.html  style.css
tests/: README.md  connection_integration.rs  connection_shutdown_integration.rs  connection_state_test.rs  dict_correctness_tests.rs  dict_entry_tests.rs  generators.rs  geo_distance_integration_tests.rs  geo_integration_tests.rs  hll_integration_tests.rs  hll_property_tests.rs  memory_usage.rs  property_tests.rs  pub_sub.rs  sds_correctness_tests.rs  skiplist_integration_tests.rs  skiplist_property_tests.rs  skiplist_сoncurrency_tests.rs  zsp_codec.rs  zsp_pubsub_integration.rs
tests/advanced_generators/: mod.rs
tests/stress/: mod.rs
zumic-error/: Cargo.toml  README.md
zumic-error/src/: ext.rs  lib.rs  macros.rs  stack.rs  status_code.rs
zumic-error/src/types/: auth.rs  client.rs  cluster.rs  memory.rs  mod.rs  network.rs  persistent.rs  pubsub.rs  sds.rs  storage.rs  zdb_error.rs  zdb_protocol.rs  zsp_error.rs  zsp_protocol.rs
(+79 files in other folders)
