[package]
name = "zumic"
version = "0.5.0"
edition = "2021"
authors = ["Mikhail <mikhail.f.zhuravlev@gmail.com>"]
repository = "https://github.com/MiCkEyZzZ/zumic"
readme = "README.md"
keywords = ["database", "storage", "key-value", "zumic"]
categories = [
    "database-implementations",
    "data-structures",
    "network-programming",
]
homepage = "https://github.com/MiCkEyZzZ/zumic"
publish = false

[workspace]
resolver = "2"
members = [
    ".",
    "zumic-error",
    "benches",
    "examples",
]
exclude = ["fuzz"]

[workspace.dependencies]
# Internal crates (referenced by workspace = true in member manifests)
zumic-error = { path = "zumic-error" }

arbitrary = { version = "1.3", features = ["derive"] }
bytes = { version = "1.10.1", features = ["serde"] }
criterion = { version = "0.6.0", features = ["async"] }
dashmap = "6.1.0"
flate2 = "1.1.2"
globset = "0.4.16"
mlua = { version = "0.10", features = [
    "lua54",
    "vendored",
    "async",
    "serialize",
] }
num_enum = "0.7.5"
once_cell = "1.21.3"
ordered-float = { version = "5.0.0", features = ["serde"] }
rand = "0.8"
serde = { version = "1.0.228", features = ["derive"] }
serde-big-array = "0.5.1"
serde_json = "1.0.140"
serde_repr = "0.1.20"
strum = "0.27.2"
strum_macros = "0.27.2"
thiserror = "2.0.12"
tokio = { version = "1.45.1", features = ["full", "test-util"] }
zstd = "0.13.3"

[workspace.lints.rust]
unsafe_code = "forbid"
unused = { level = "warn", priority = -1 }

[[bin]]
name = "zumic"
path = "src/main.rs"

[[bin]]
name = "zumic-cli"
path = "src/bin/zumic-cli.rs"

[dependencies]
anyhow = "1.0"
argon2 = "0.5.3"
async-trait = "0.1.88"
atty = "0.2.14"
bcrypt = "0.17.0"
bincode = "1.3"
bitflags = "2.9.1"
byteorder = "1"
bytes = { version = "1.10.1", features = ["serde"] }
chrono = "0.4.41"
config = "0.15.11"
crc16 = "0.4.0"
crc32fast = "1.4.2"
dashmap = "6.1.0"
fastrand = "2.3.0"
flate2 = "1.1.2"
glob = "0.3"
globset = "0.4.16"
libloading = "0.8.8"
loom = "0.7.2"
lru = "0.16.3"
memchr = "2.7.4"
mlua = { version = "0.10", features = [
    "lua54",
    "vendored",
    "async",
    "serialize",
] }
num-integer = "0.1.46"
num_cpus = "1.17.0"
once_cell = "1.21.3"
ordered-float = { version = "5.0.0", features = ["serde"] }
owo-colors = "4.2.2"
phf = { version = "0.11", features = ["macros"] }
proptest = "1.4"
tempfile = "3.0"

# Дополнительно для лучшей интеграции с proptest
base64 = "0.2"
clap = { version = "4.5", features = ["derive", "env", "cargo"] }
hmac = "0.12.1"
hostname = "0.4"
jwt = "0.16.0"
lazy_static = "1.4"
parking_lot = "0.12.5"
proptest-derive = "0.4"
rand = "0.8"
rmp-serde = "1.3.0"
rstest = "0.26.1"
rust_decimal = "1.39.0"
rustyline = "17.0.1"
serde = { version = "1.0.219", features = ["derive"] }
serde-big-array = "0.5.1"
serde_cbor = "0.11.2"
serde_json = "1.0.140"
sha2 = "0.10.9"
siphasher = "0.3"
sysinfo = "0.30"
thiserror = "2.0.12"
tokio = { version = "1.45.1", features = ["full", "test-util"] }
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = [
    "fmt",
    "env-filter",
    "json",
    "ansi",
] }
uuid = { version = "1", features = ["serde", "v4"] }
zstd = "0.13.3"
zumic-error = { workspace = true }

[dependencies.wasmtime]
version = "36.0.3"

[build-dependencies]
chrono = "0.4.41"
wasmtime-wit-bindgen = "31.0.0"

[dev-dependencies]
criterion = { version = "0.6.0", features = ["async"] }
filetime = "0.2"
serial_test = "3.2.0"
tempfile = "3.0"
tokio = { version = "1.45.1", features = [
    "macros",
    "rt-multi-thread",
    "test-util",
] }

[profile.bench]
opt-level = 3

[dependencies.arbitrary]
features = ["derive"]
optional = true
version = "1.3"

[features]
default = []
concurrent = []
fuzz = []
avx512 = []

[profile.release]
opt-level = 1     # меньше оптимизаций быстрее сборка и меньше RAM
lto = false       # отключаем link-time optimization (жрет память)
codegen-units = 1 # пусть компилятор компилирует последовательно
debug = 1         # сохраняем минимум отладочной информации
