[package]
name = "zumic-benchmark"
version = "0.1.0"
edition = "2021"
description = "zumic benchmarking suite"
license = "Apache-2.0"
publish = false

[[bench]]
name = "zumic-benchmark"
path = "benches/zdb-benchmark/compression_levels.rs"
harness = false

[lints]
workspace = true

[dependencies]
criterion = { workspace = true }
zumic = { path = "../" }
zumic-error = { workspace = true }

ordered-float = "5.1.0"
rdb = "0.3.0"
zstd = "0.13.3"
