[package]
name = "zumic-benchmark"
version = "0.1.0"
edition = "2021"
description = "Criterion-based benchmarking suite for Zumic: microbenchmarks for data-structures and engine primitives (QuickList, SkipList, Dict, Stream, etc.)."
readme = "README.md"
license = "Apache-2.0"
keywords = ["zumic", "benchmark", "performance", "criterion", "listpack", "skiplist"]
categories = ["benchmarking", "performance"]
publish = false

[[bench]]
name = "zumic-benchmark"
path = "benches/skiplist_benchmark/concurrent_bench.rs"
harness = false

[lints]
workspace = true

[dependencies]
zumic = { path = "../" }
zumic-error = { workspace = true }

ordered-float = { workspace = true }
rdb = "0.3.0"
zstd = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
rand = { workspace = true, features = ["small_rng"] }
