[package]
name = "zumic-fuzz"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[package.metadata]
cargo-fuzz = true

[features]
default = []
unstable = []

[dependencies]
libfuzzer-sys = "0.4"
arbitrary = { version = "1.3", features = ["derive"] }

# Подключаем основной проект ZUMIC как зависимость
zumic = { path = "..", features = ["fuzz"] }

# если нужны async utils
tokio = { workspace = true, optional = true }

[dev-dependencies]

[profile.release]
opt-level = 1 # вместо 3, чтобы не раздувать компиляцию
lto = false   # выключить link-time optimization
debug = true  # оставить отладочные символы

# Fuzz targets — пути относительны директории fuzz/
[[bin]]
name = "decode_value"
path = "targets/decode_value.rs"
test = false
bench = false
doc = false
