[package]
name = "zumic-fuzz"
version = "0.1.0"
edition = "2021"
publish = false

[package.metadata]
cargo-fuzz = true

[features]
default = []
unstable = []

[dependencies]
arbitrary = { version = "1.3", features = ["derive"] }
libfuzzer-sys = "0.4"
ordered-float = "3"

# Подключаем основной проект ZUMIC как зависимость
zumic = { path = ".." }

[dev-dependencies]
# (можно добавить здесь dev-only библиотеки при необходимости)

# Fuzz targets — пути относительны директории fuzz/
[[bin]]
name = "decode_value"
path = "targets/decode_value.rs"
test = false
bench = false
doc = false

[[bin]]
name = "encode_roundtrip"
path = "encode_roundtrip.rs"
test = false
bench = false
doc = false

# Профили компиляции (только одна секция!)
[profile.release]
opt-level = 3
lto = true
debug = true

[profile.dev]
opt-level = 1

# Отдельный workspace для fuzz
[workspace]
